# BRK241-frontier

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  README.md  agent.yaml  azure.yaml  check_agents.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: DEMO.md  KQL.md  canvas-demo.md
infra/: main.bicep  main.json  main.parameters.json
scripts/: canvas_demo.ps1  connect_foundry_iq.py  deploy-hosted-agent.ps1  gen_architecture_diagram.py  gen_services_architecture.py  grant-mi-roles.ps1  postdeploy.ps1  provision_foundry_iq.py
src/fibreops/: Dockerfile  __init__.py  config.py  demo.py  models.py  observability.py  optimiser.py  orchestrator.py
src/fibreops/agents/: Dockerfile.hosted  __init__.py  deploy.py  factory.py  foundry_services.py  hosted_app.py  instructions.py  publisher.py  routines.py
src/fibreops/data/: engineers.json  fibre_nodes.json  sop_attenuation.md  sop_loss_of_light.md
src/fibreops/mocks/: __init__.py  d365_service.py
src/fibreops/sdk/: __init__.py  copilot_client.py
src/fibreops/telemetry/: __init__.py  generator.py
src/fibreops/tools/: __init__.py  dispatch.py  knowledge.py  memory.py  teams.py  (+2 more)
state/: foundry_agents.json
tests/: __init__.py  conftest.py  test_copilot_sdk.py  test_d365_mock.py  test_e2e_local.py  test_factory.py  test_knowledge_iq.py  test_m365_publish.py  test_models.py  test_observability.py  test_optimiser.py  test_orchestrator.py  test_routines.py  test_teams.py  test_telemetry.py  test_tools.py  test_ui.py  test_voice.py  test_voice_live_session.py
(+16 files in other folders)
